--- a/scripts/install.ini
+++ b/scripts/install.ini
@@ -31,6 +31,8 @@ nginx_ext_protocol = https
 nginx_prefix = IntelligentAnalysis
 ; 本机IP
 docker_host_int_ip =
+; docker NAT
+subnet_prefix = 172.19
 
 ssl_password = Cwiz_123
 ssl_enable = true
