--- a/template/log-analysis/config/log.analysis.properties
+++ b/template/log-analysis/config/log.analysis.properties
@@ -4,7 +4,7 @@
 #LogClustering.Delimiters = \ \t\n\r\f\",.()[]/'={}!:-@?%
 LogClustering.Delimiters = \ \t\n\r\f\",/'!?%
 
-LogClustering.HttpHost = 172.19.0.18
+LogClustering.HttpHost = log_analysis
 LogClustering.HttpPort = 9400
 
 LogClustering.ElasticHost = <:nginx_ip:>
