--- a/template/tools/certs/ssl/server.conf
+++ b/template/tools/certs/ssl/server.conf
@@ -18,57 +18,57 @@ subjectAltName = @alt_names
 
 [alt_names]
 DNS.1 = <:docker_host_int_ip:> # change_to_the_real_host_ip
-DNS.2 = 172.19.0.1
-DNS.3 = 172.19.0.2
-DNS.4 = 172.19.0.3
-DNS.5 = 172.19.0.4
-DNS.6 = 172.19.0.5
-DNS.7 = 172.19.0.6
-DNS.8 = 172.19.0.7
-DNS.9 = 172.19.0.8
-DNS.10 = 172.19.0.9
-DNS.11 = 172.19.0.10
-DNS.12 = 172.19.0.11
-DNS.13 = 172.19.0.12
-DNS.14 = 172.19.0.13
-DNS.15 = 172.19.0.14
-DNS.16 = 172.19.0.15
-DNS.17 = 172.19.0.16
-DNS.18 = 172.19.0.17
-DNS.19 = 172.19.0.18
-DNS.20 = 172.19.0.19
-DNS.21 = 172.19.0.20
-DNS.22 = 172.19.0.21
-DNS.23 = 172.19.0.22
-DNS.24 = 172.19.0.23
-DNS.25 = 172.19.0.24
-DNS.26 = 172.19.0.25
+DNS.2 = <:subnet_prefix:>.0.1
+DNS.3 = <:subnet_prefix:>.0.2
+DNS.4 = <:subnet_prefix:>.0.3
+DNS.5 = <:subnet_prefix:>.0.4
+DNS.6 = <:subnet_prefix:>.0.5
+DNS.7 = <:subnet_prefix:>.0.6
+DNS.8 = <:subnet_prefix:>.0.7
+DNS.9 = <:subnet_prefix:>.0.8
+DNS.10 = <:subnet_prefix:>.0.9
+DNS.11 = <:subnet_prefix:>.0.10
+DNS.12 = <:subnet_prefix:>.0.11
+DNS.13 = <:subnet_prefix:>.0.12
+DNS.14 = <:subnet_prefix:>.0.13
+DNS.15 = <:subnet_prefix:>.0.14
+DNS.16 = <:subnet_prefix:>.0.15
+DNS.17 = <:subnet_prefix:>.0.16
+DNS.18 = <:subnet_prefix:>.0.17
+DNS.19 = <:subnet_prefix:>.0.18
+DNS.20 = <:subnet_prefix:>.0.19
+DNS.21 = <:subnet_prefix:>.0.20
+DNS.22 = <:subnet_prefix:>.0.21
+DNS.23 = <:subnet_prefix:>.0.22
+DNS.24 = <:subnet_prefix:>.0.23
+DNS.25 = <:subnet_prefix:>.0.24
+DNS.26 = <:subnet_prefix:>.0.25
 DNS.27 = nginx
 DNS.28 = <:nginx_ext_ip:>
 IP.1 = <:docker_host_int_ip:> # change_to_the_real_host_ip
-IP.2 = 172.19.0.1
-IP.3 = 172.19.0.2
-IP.4 = 172.19.0.3
-IP.5 = 172.19.0.4
-IP.6 = 172.19.0.5
-IP.7 = 172.19.0.6
-IP.8 = 172.19.0.7
-IP.9 = 172.19.0.8
-IP.10 = 172.19.0.9
-IP.11 = 172.19.0.10
-IP.12 = 172.19.0.11
-IP.13 = 172.19.0.12
-IP.14 = 172.19.0.13
-IP.15 = 172.19.0.14
-IP.16 = 172.19.0.15
-IP.17 = 172.19.0.16
-IP.18 = 172.19.0.17
-IP.19 = 172.19.0.18
-IP.20 = 172.19.0.19
-IP.21 = 172.19.0.20
-IP.22 = 172.19.0.21
-IP.23 = 172.19.0.22
-IP.24 = 172.19.0.23
-IP.25 = 172.19.0.24
-IP.26 = 172.19.0.25
+IP.2 = <:subnet_prefix:>.0.1
+IP.3 = <:subnet_prefix:>.0.2
+IP.4 = <:subnet_prefix:>.0.3
+IP.5 = <:subnet_prefix:>.0.4
+IP.6 = <:subnet_prefix:>.0.5
+IP.7 = <:subnet_prefix:>.0.6
+IP.8 = <:subnet_prefix:>.0.7
+IP.9 = <:subnet_prefix:>.0.8
+IP.10 = <:subnet_prefix:>.0.9
+IP.11 = <:subnet_prefix:>.0.10
+IP.12 = <:subnet_prefix:>.0.11
+IP.13 = <:subnet_prefix:>.0.12
+IP.14 = <:subnet_prefix:>.0.13
+IP.15 = <:subnet_prefix:>.0.14
+IP.16 = <:subnet_prefix:>.0.15
+IP.17 = <:subnet_prefix:>.0.16
+IP.18 = <:subnet_prefix:>.0.17
+IP.19 = <:subnet_prefix:>.0.18
+IP.20 = <:subnet_prefix:>.0.19
+IP.21 = <:subnet_prefix:>.0.20
+IP.22 = <:subnet_prefix:>.0.21
+IP.23 = <:subnet_prefix:>.0.22
+IP.24 = <:subnet_prefix:>.0.23
+IP.25 = <:subnet_prefix:>.0.24
+IP.26 = <:subnet_prefix:>.0.25
 IP.27 = <:nginx_ext_ip:>
